# hutton32-gpu

./: .gitignore  Cargo.toml  build.rs  readme.md
assets/: sw.js
src/: gpu.rs  gpu_draw.rs  gui.rs  lib.rs  main.rs  shader.wgsl
src/egui_gpu_plot/: Cargo.toml
src/egui_gpu_plot/src/: lib.rs  line_shader.wgsl
src/gpu/: gpu_automata.rs  mod.rs
src/kernel/: compute.wgsl  display_shader.wgsl  fragment.wgsl  game_of_life.wgsl  main.wgsl  util.wgsl  vertex.wgsl
src/kernel/rules/: hutton32-branchless.rule.wgsl  hutton32.rule.wgsl  hutton32b.rule.wgsl  langton_ant_llrr.rule.wgsl
