[package]
name = "hutton32-gpu"
version = "0.1.0"
edition = "2021"
authors = ["FredericaBernkastel <bernkastel.frederica@protonmail.com>"]

[dependencies]
cfg-if = "1"
bytemuck = "1.12"
egui = { version = "0.20.0", default-features = false }
egui-wgpu = { version = "0.20.0" }
eframe = { version = "0.20.0", default-features = false, features = ["wgpu", "default_fonts", "persistence"] }
wgpu = { version = "0.14", default-features = false }
image = { version = "0.24", default-features = false, features = ["png"] }
wgsl_preprocessor = { version = "1.1", features = ["array_vectors"] }